Updated web portfolio with new full stack projects from the past year

--- a/index.html
+++ b/index.html
@@ -20,15 +20,128 @@
 
     <div class="nav">
       <div class="container">
-        <ul>
+        <ul class="first-list">
+          <li><a href="#applications">WEB APPLICATIONS</a></li>
           <li><a href="#webDesign">WEBSITE DESIGNS</a></li>
-          <li><a href="#applications">APPLICATIONS</a></li>
+          <li><a href="#microservices">MICROSERVICES</a></li>
+          <li><a href="#dataVisualizations">DATA VISUALIZATIONS</a></li>
           <li><a href="#games">GAMES</a></li>
+        </ul>
+        <ul class="second-list">
           <li><a href="#about">ABOUT</a></li>
           <li><a href="#skills">SKILLS</a></li>
           <li><a href="#work">WORK EXPERIENCE</a></li>
         </ul>
       </div>
+    </div>
+
+    <div class="container" id="applications">
+
+      <h3>WEB APPLICATIONS</h3>
+
+      <div class="row">
+        <div class="col-md-4">
+          <a href="http://ec2-54-200-192-157.us-west-2.compute.amazonaws.com:3012/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/TotesVotes.png" alt="Totes Votes" /></a>
+          <p>Totes Votes</p>
+        </div>
+        <div class="col-md-4">
+          <a href="http://ec2-54-200-192-157.us-west-2.compute.amazonaws.com:3011/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/CrossyBlock.png" alt="Crossy Block" /></a>
+          <p>Crossy Block</p>
+        </div>
+        <div class="col-md-4">
+          <a href="http://ec2-54-200-192-157.us-west-2.compute.amazonaws.com:3004/login" target="_blank"><img class="img-responsive" src="Images/Thumbnails/PixelMania.png" alt="Pixel Mania" /></a>
+          <p>Pixel Mania</p>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-4">
+          <a href="http://ec2-54-200-192-157.us-west-2.compute.amazonaws.com:3002/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/MongoDBreakout.png" alt="MongoDBreakout" /></a>
+          <p>MongoDBreakout</p>
+        </div>
+        <div class="col-md-4">
+          <a href="http://ec2-54-200-192-157.us-west-2.compute.amazonaws.com:3009/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/CorporateBSGenerator.png" alt="Corporate BS Generator" /></a>
+          <p>Corporate BS Generator</p>
+        </div>
+        <div class="col-md-4">
+          <a href="QrappyBird/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/QrappyBird.png" alt="Qrappy Bird" /></a>
+          <p>Qrappy Bird</p>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-4">
+          <a href="http://ec2-54-200-192-157.us-west-2.compute.amazonaws.com:3006/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/BestMusic.png" alt="Best Music" /></a>
+          <p>Best Music</p>
+        </div>
+        <div class="col-md-4">
+          <a href="http://ec2-54-200-192-157.us-west-2.compute.amazonaws.com:3007/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/FirebaseChat.png" alt="Firebase Chatroom" /></a>
+          <p>Firebase Chatroom</p>
+        </div>
+        <div class="col-md-4">
+          <a href="http://ec2-54-200-192-157.us-west-2.compute.amazonaws.com:3010/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/CommentBoard.png" alt="Comment Board" /></a>
+          <p>Comment Board</p>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-4">
+          <a href="http://ec2-54-200-192-157.us-west-2.compute.amazonaws.com:3001/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/UtahWeather.png" alt="Utah Weather" /></a>
+          <p>Utah Weather</p>
+        </div>
+        <div class="col-md-4">
+          <a href="Movies/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Movies.png" alt="The Movie Database" /></a>
+          <p>The Movie Database</p>
+        </div>
+        <div class="col-md-4">
+          <a href="Wikipedia/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Wikipedia.png" alt="Wikipedia Search Engine" /></a>
+          <p>Wikipedia Search Engine</p>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-4">
+          <a href="CamperNews/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/CamperNews.png" alt="Camper News" /></a>
+          <p>Camper News</p>
+        </div>
+        <div class="col-md-4">
+          <a href="Weather/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Weather.png" alt="Current Local Weather" /></a>
+          <p>Current Local Weather</p>
+        </div>
+        <div class="col-md-4">
+          <a href="TwitchTV/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/TwitchTV.png" alt="Twitch TV" /></a>
+          <p>Twitch TV Streamers</p>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-4">
+          <a href="JSCalculator/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/JSCalculator.png" alt="JavaScript Calculator" /></a>
+          <p>JavaScript Calculator</p>
+        </div>
+        <div class="col-md-4">
+          <a href="PomodoroTimer/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/PomodoroTimer.png" alt="Pomodoro Timer" /></a>
+          <p>Pomodoro Timer</p>
+        </div>
+        <div class="col-md-4">
+          <a href="QuoteGenerator/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/QuoteGenerator.png" alt="Quote Generator" /></a>
+          <p>Quote Generator</p>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-4">
+          <a href="http://ec2-54-200-192-157.us-west-2.compute.amazonaws.com:3003/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Pokedex.png" alt="Pokedex" /></a>
+          <p>Pokedex</p>
+        </div>
+      </div>
+
+    </div>
+
+    <div class="separator">
+      <a href="#applications"><img src="Images/up.png" alt="Up Arrow" /></a>
+      <a href="#home"><img src="Images/home.png" alt="Home" /></a>
+      <a href="#microservices"><img src="Images/down.png" alt="Down Arrow" /></a>
     </div>
 
     <div class="container" id="webDesign">
@@ -113,66 +226,85 @@
     </div>
 
     <div class="separator">
-      <a href="#games"><img src="Images/down.png" alt="Down Arrow" /></a>
-      <a href="#home"><img src="Images/home.png" alt="Home" /></a>
       <a href="#webDesign"><img src="Images/up.png" alt="Up Arrow" /></a>
+      <a href="#home"><img src="Images/home.png" alt="Home" /></a>
+      <a href="#dataVisualizations"><img src="Images/down.png" alt="Down Arrow" /></a>
     </div>
 
-    <div class="container" id="applications">
+    <div class="container" id="microservices">
 
-      <h3>WEB APPLICATIONS</h3>
+      <h3>MICROSERVICES</h3>
 
       <div class="row">
         <div class="col-md-4">
-          <a href="CamperNews/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/CamperNews.png" alt="Camper News" /></a>
-          <p>Camper News</p>
+          <a href="http://ec2-54-200-192-157.us-west-2.compute.amazonaws.com:3500/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/TimeStampMicroservice.png" alt="Timestamp Microservice" /></a>
+          <p>Timestamp Microservice</p>
         </div>
         <div class="col-md-4">
-          <a href="Weather/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Weather.png" alt="Current Local Weather" /></a>
-          <p>Current Local Weather</p>
+          <a href="http://ec2-54-200-192-157.us-west-2.compute.amazonaws.com:3501/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/RequestHeaderParserMicroservice.png" alt="Request Header Parser Microservice" /></a>
+          <p>Request Header Parser Microservice</p>
         </div>
         <div class="col-md-4">
-          <a href="TwitchTV/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/TwitchTV.png" alt="Twitch TV" /></a>
-          <p>Twitch TV Streamers</p>
+          <a href="http://ec2-54-200-192-157.us-west-2.compute.amazonaws.com:3502/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/URLShortenerMicroservice.png" alt="URL Shortener Microservice" /></a>
+          <p>URL Shortener Microservice</p>
         </div>
       </div>
 
       <div class="row">
         <div class="col-md-4">
-          <a href="JSCalculator/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/JSCalculator.png" alt="JavaScript Calculator" /></a>
-          <p>JavaScript Calculator</p>
+          <a href="http://ec2-54-200-192-157.us-west-2.compute.amazonaws.com:3503/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/ImgurSearchEngine.png" alt="Imgur Search Engine" /></a>
+          <p>Imgur Search Engine</p>
         </div>
         <div class="col-md-4">
-          <a href="PomodoroTimer/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/PomodoroTimer.png" alt="Pomodoro Timer" /></a>
-          <p>Pomodoro Timer</p>
-        </div>
-        <div class="col-md-4">
-          <a href="QuoteGenerator/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/QuoteGenerator.png" alt="Quote Generator" /></a>
-          <p>Quote Generator</p>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-md-4">
-          <a href="UtahWeather/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/UtahWeather.png" alt="Utah Weather" /></a>
-          <p>Utah Weather</p>
-        </div>
-        <div class="col-md-4">
-          <a href="Movies/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Movies.png" alt="The Movie Database" /></a>
-          <p>The Movie Database</p>
-        </div>
-        <div class="col-md-4">
-          <a href="Wikipedia/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Wikipedia.png" alt="Wikipedia Search Engine" /></a>
-          <p>Wikipedia Search Engine</p>
+          <a href="http://ec2-54-200-192-157.us-west-2.compute.amazonaws.com:3504/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/FileUploadMetadataMicroservice.png" alt="File Upload Metadata Microservice" /></a>
+          <p>File Upload Metadata Microservice</p>
         </div>
       </div>
 
     </div>
 
     <div class="separator">
-      <a href="#about"><img src="Images/down.png" alt="Down Arrow" /></a>
+      <a href="#microservices"><img src="Images/up.png" alt="Up Arrow" /></a>
       <a href="#home"><img src="Images/home.png" alt="Home" /></a>
-      <a href="#applications"><img src="Images/up.png" alt="Up Arrow" /></a>
+      <a href="#games"><img src="Images/down.png" alt="Down Arrow" /></a>
+    </div>
+
+    <div class="container" id="dataVisualizations">
+
+      <h3>DATA VISUALIZATIONS</h3>
+
+      <div class="row">
+        <div class="col-md-4">
+          <a href="../D3/bar-chart-gdp/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/BarChartGDP.png" alt="Bar Chart of GDP" /></a>
+          <p>Bar Chart of GDP</p>
+        </div>
+        <div class="col-md-4">
+          <a href="../D3/scatterplot-doping/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/ScatterplotDoping.png" alt="Scatterplot of Doping" /></a>
+          <p>Scatterplot of Doping</p>
+        </div>
+        <div class="col-md-4">
+          <a href="../D3/heat-map-global-temp/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/HeatMapGlobalTemp.png" alt="Heat Map of Global Temperature" /></a>
+          <p>Heat Map of Global Temperature</p>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-4">
+          <a href="../D3/force-directed-graph-countries/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/ForceDirectedGraphCountries.png" alt="Force Directed Graph of Countries" /></a>
+          <p>Force Directed Graph of Countries</p>
+        </div>
+        <div class="col-md-4">
+          <a href="../D3/world-map-meteorites/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/WorldMapMeteorites.png" alt="World Map of Meteorites" /></a>
+          <p>World Map of Meteorites</p>
+        </div>
+      </div>
+
+    </div>
+
+    <div class="separator">
+      <a href="#dataVisualizations"><img src="Images/up.png" alt="Up Arrow" /></a>
+      <a href="#home"><img src="Images/home.png" alt="Home" /></a>
+      <a href="#about"><img src="Images/down.png" alt="Down Arrow" /></a>
     </div>
 
     <div class="container" id="games">
@@ -185,8 +317,8 @@
           <p>Duck Hunt</p>
         </div>
         <div class="col-md-4">
-          <a href="https://survey.qualtrics.com/jfe/form/SV_0qgiRH7WiDPcY85" target="_blank"><img class="img-responsive" src="Images/Thumbnails/QrappyBird.png" alt="Qrappy Bird" /></a>
-          <p>Qrappy Bird</p>
+          <a href="TicTacToe/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/TicTacToe.png" alt="Tic-Tac-Toe" /></a>
+          <p>Tic-Tac-Toe</p>
         </div>
         <div class="col-md-4">
           <a href="https://survey.qualtrics.com/jfe3/form/SV_bCb70NimhKVGTQx" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Mario.png" alt="Super Mario" /></a>
@@ -219,7 +351,7 @@
           <p>Dinosaur Park Survey</p>
         </div>
         <div class="col-md-4">
-          <a href="https://survey.qualtrics.com/jfe/form/SV_2gaDavqpxc50K0t" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Squarexploder.png" alt="Squarexploder" /></a>
+          <a href="Squarexploder.html" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Squarexploder.png" alt="Squarexploder" /></a>
           <p>Squarexploder</p>
         </div>
       </div>
@@ -239,19 +371,12 @@
         </div>
       </div>
 
-      <div class="row">
-        <div class="col-md-4">
-          <a href="TicTacToe/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/TicTacToe.png" alt="Tic-Tac-Toe" /></a>
-          <p>Tic-Tac-Toe</p>
-        </div>
-      </div>
-
     </div>
 
     <div class="separator">
-      <a href="#skills"><img src="Images/down.png" alt="Down Arrow" /></a>
-      <a href="#home"><img src="Images/home.png" alt="Home" /></a>
       <a href="#games"><img src="Images/up.png" alt="Up Arrow" /></a>
+      <a href="#home"><img src="Images/home.png" alt="Home" /></a>
+      <a href="#skills"><img src="Images/down.png" alt="Down Arrow" /></a>
     </div>
 
     <div class="container" id="about">
@@ -263,9 +388,9 @@
     </div>
 
     <div class="separator">
-      <a href="#work"><img src="Images/down.png" alt="Down Arrow" /></a>
-      <a href="#home"><img src="Images/home.png" alt="Home" /></a>
       <a href="#about"><img src="Images/up.png" alt="Up Arrow" /></a>
+      <a href="#home"><img src="Images/home.png" alt="Home" /></a>
+      <a href="#work"><img src="Images/down.png" alt="Down Arrow" /></a>
     </div>
 
     <div class="container" id="skills">
@@ -287,8 +412,8 @@
     </div>
 
     <div class="separator">
-      <a href="#home"><img src="Images/home.png" alt="Home" /></a>
       <a href="#skills"><img src="Images/up.png" alt="Up Arrow" /></a>
+      <a href="#home"><img src="Images/home.png" alt="Home" /></a>
     </div>
 
     <div class="container" id="work">
