Changed location of GrowingBubbles and Squarexploder to their own folders; made Dot Chaser its own file instead of a survey; started on TwitchTV

--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
 
       <div class="row">
         <div class="col-md-4">
-          <a href="https://survey.qualtrics.com/jfe/form/SV_6eVuJ3bE4daIavb" target="_blank"><img class="img-responsive" src="Images/Thumbnails/DotChaser.png" alt="Dot Chaser" /></a>
+          <a href="DotChaser/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/DotChaser.png" alt="Dot Chaser" /></a>
           <p>Dot Chaser</p>
         </div>
         <div class="col-md-4">
@@ -351,7 +351,7 @@
           <p>Dinosaur Park Survey</p>
         </div>
         <div class="col-md-4">
-          <a href="Squarexploder.html" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Squarexploder.png" alt="Squarexploder" /></a>
+          <a href="Squarexploder/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Squarexploder.png" alt="Squarexploder" /></a>
           <p>Squarexploder</p>
         </div>
       </div>
@@ -362,7 +362,7 @@
           <p>Simon Says</p>
         </div>
         <div class="col-md-4">
-          <a href="GrowingBubbles.html" target="_blank"><img class="img-responsive" src="Images/Thumbnails/GrowingBubbles.png" alt="Growing Bubbles" /></a>
+          <a href="GrowingBubbles/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/GrowingBubbles.png" alt="Growing Bubbles" /></a>
           <p>Growing Bubbles</p>
         </div>
         <div class="col-md-4">
