--- a/BestMusic/public/index.html
+++ b/BestMusic/public/index.html
@@ -2,93 +2,92 @@
 
 	<head>
 		<title>Best Music</title>
-		<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet" />
-		<link href="stylesheets/style.css" type="text" rel="stylesheet" />
-		<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.19/angular.min.js"></script>
-		<script src="javascripts/app.js"></script>
+		<!-- <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet" /> -->
+		<link href="stylesheets/bootstrap.3.2.0.min.css" rel="stylesheet" />
+		<link href="stylesheets/style.css" type="text/css" rel="stylesheet" />
+		<!-- <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.19/angular.min.js"></script> -->
+		<script src="javascripts/angular.1.2.19.min.js" type="text/javascript"></script>
+		<script src="javascripts/app.js" type="text/javascript"></script>
 	</head>
 
 	<body ng-app="song" ng-controller="MainCtrl">
 	
-		<div class="row">
-			<div class="col-md-12">
-				
-				<div class="page-header"> 
-					<h1>Best Music</h1>
-				</div>
-
-				<form ng-submit="addSong()" class="form-horizontal" style="margin-top: 30px;">
-
-					<div class="form-group">
-					    <label for="title" class="col-sm-2 control-label">Song Title</label>
-					    <div class="col-sm-10">
-					      	<input type="text" class="form-control" id="title" ng-model="title"/>
-					    </div>
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12">
+					
+					<div class="page-header"> 
+						<h1>Best Music</h1>
 					</div>
 
-					<div class="form-group">
-					    <label for="artist" class="col-sm-2 control-label">Artist</label>
-					    <div class="col-sm-10">
-					      	<input type="text" class="form-control" id="artist" ng-model="artist"/>
-					    </div>
-					</div>
+					<form ng-submit="addSong()" class="form-horizontal" style="margin-top: 30px;">
 
-					<div class="form-group">
-					    <label for="album" class="col-sm-2 control-label">Album</label>
-					    <div class="col-sm-10">
-					      	<input type="text" class="form-control" id="album" ng-model="album"/>
-					    </div>
-					</div>
-
-					<div class="form-group">
-					    <label for="genre" class="col-sm-2 control-label">Genre</label>
-					    <div class="col-sm-10">
-					      	<input type="text" class="form-control" id="genre" ng-model="genre"/>
-					    </div>
-					</div>
-
-					<div class="form-group">
-					    <label for="art" class="col-sm-2 control-label">Album Artwork URL</label>
-					    <div class="col-sm-10">
-					      	<input type="text" class="form-control" id="art" ng-model="art"/>
-					    </div>
-					</div>
-
-					<div class="form-group">
-    					<div class="col-sm-offset-2 col-sm-10">
-							<button type="submit" class="btn btn-default">Add Song</button>
+						<div class="form-group">
+						    <label for="title" class="col-sm-2 control-label">Song Title</label>
+						    <div class="col-sm-10">
+						      	<input type="text" class="form-control" id="title" ng-model="title"/>
+						    </div>
 						</div>
-					</div>
-				</form>
 
-				<!--
-				<div ng-repeat="song in songs | orderBy: ['genre', '-upvotes', 'artist', 'album', 'title']">
-					<div class="oneSong">
-						<span class="glyphicon glyphicon-thumbs-up" ng-click="incrementUpvotes(song)"></span>
-					<b>"{{song.title}}"</b> by {{song.artist}} as heard on <i>{{song.album}}</i> ({{song.genre}}) <img ng-src='{{song.art}}' height=50 /> - upvotes: {{song.upvotes}}
-					</div>
+						<div class="form-group">
+						    <label for="artist" class="col-sm-2 control-label">Artist</label>
+						    <div class="col-sm-10">
+						      	<input type="text" class="form-control" id="artist" ng-model="artist"/>
+						    </div>
+						</div>
+
+						<div class="form-group">
+						    <label for="album" class="col-sm-2 control-label">Album</label>
+						    <div class="col-sm-10">
+						      	<input type="text" class="form-control" id="album" ng-model="album"/>
+						    </div>
+						</div>
+
+						<div class="form-group">
+						    <label for="genre" class="col-sm-2 control-label">Genre</label>
+						    <div class="col-sm-10">
+						      	<input type="text" class="form-control" id="genre" ng-model="genre"/>
+						    </div>
+						</div>
+
+						<div class="form-group">
+						    <label for="art" class="col-sm-2 control-label">Album Artwork URL</label>
+						    <div class="col-sm-10">
+						      	<input type="text" class="form-control" id="art" ng-model="art"/>
+						    </div>
+						</div>
+
+						<div class="form-group">
+	    					<div class="col-sm-offset-2 col-sm-10">
+								<button type="submit" class="btn btn-default">Add Song</button>
+							</div>
+						</div>
+					</form>
+
+					<table>
+						<thead>
+			                <tr>
+			                	<th>Upvotes</th>
+			                    <th>Title</th>
+			                    <th>Artist</th>
+			                    <th>Album</th>
+			                    <th>Genre</th>
+			                    <th>Album Art</th>
+			                </tr>
+			            </thead>
+			            <tbody>
+			                <tr ng-repeat="song in songs | orderBy: ['genre', '-upvotes', 'artist', 'album', 'title']">
+			                    <td><span class="glyphicon glyphicon-thumbs-up" ng-click="incrementUpvotes(song)"></span>  {{ song.upvotes }}</td>
+			                    <td>{{ song.title }}</td>
+			                    <td>{{ song.artist }}</td>
+			                    <td>{{ song.album }}</td>
+			                    <td>{{ song.genre }}</td>
+			                    <td><img ng-src='{{song.art}}' height=50 /></td>
+			                </tr>
+			            </tbody>
+	            	</table>
+
 				</div>
-				-->
-
-				<table>
-	                <tr>
-	                	<th>Upvotes</th>
-	                    <th>Title</th>
-	                    <th>Artist</th>
-	                    <th>Album</th>
-	                    <th>Genre</th>
-	                    <th>Album Art</th>
-	                </tr>
-	                <tr ng-repeat="song in songs | orderBy: ['genre', '-upvotes', 'artist', 'album', 'title']">
-	                    <td><span class="glyphicon glyphicon-thumbs-up" ng-click="incrementUpvotes(song)"></span>  {{ song.upvotes }}</td>
-	                    <td>{{ song.title }}</td>
-	                    <td>{{ song.artist }}</td>
-	                    <td>{{ song.album }}</td>
-	                    <td>{{ song.genre }}</td>
-	                    <td><img ng-src='{{song.art}}' height=50 /></td>
-	                </tr>
-            	</table>
-
 			</div>
 		</div>
 
