UtahWeatherNode: updated page and updated link for it on portfolio

--- a/UtahWeather/index.html
+++ b/UtahWeather/index.html
@@ -3,7 +3,7 @@
 		<title>Utah Weather</title>
 		<link href='//fonts.googleapis.com/css?family=Slabo+27px' rel='stylesheet' type='text/css' />
 		<link rel="stylesheet" type="text/css" href="style.css"/>
-		<script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+		<script src="//code.jquery.com/jquery-1.10.2.js"></script>
 		<script src="script.js"></script>
 	</head>
 	<body>
