--- a/Qualtrics/Pantene/index.html
+++ b/Qualtrics/Pantene/index.html
@@ -18,8 +18,8 @@
 		<h1>Pantene Demo Site - Home Page</h1>
 		<p>On this page, a short JavaScript snippet is run to set a cookie for the participant ID.</p>
 		<br/>
-		<a href="linkToTarget">Click to see Link to Target example</a>
-		<a href="embeddedTarget">Click to see Embedded Target example</a>
+		<a href="linkToTarget/">Click to see Link to Target example</a>
+		<a href="embeddedTarget/">Click to see Embedded Target example</a>
 
 		<!--BEGIN QUALTRICS SITE INTERCEPT-->
 		<script type='text/javascript'>
