--- a/Qualtrics/Pantene/linkToTarget/index.html
+++ b/Qualtrics/Pantene/linkToTarget/index.html
@@ -8,7 +8,7 @@
 		<p>The intercept should be triggered from this page.</p>
 		<br />
 		<a href="../">Click to go back to the home page</a>
-		<a href="embeddedTarget">Click to see Embedded Target example</a>
+		<a href="../embeddedTarget">Click to see Embedded Target example</a>
 
 		<!--BEGIN QUALTRICS SITE INTERCEPT-->
 		<script type='text/javascript'>
