--- a/Qualtrics/Pantene/embeddedTarget/index.html
+++ b/Qualtrics/Pantene/embeddedTarget/index.html
@@ -7,7 +7,8 @@
 		<h1>Pantene Demo Site - Embedded Target</h1>
 		<p>The intercept should be triggered from this page.</p>
 		<br />
-		<a href="linkToTarget">Click to see Link to Target example</a>
+		<a href="../">Click to go back to the home page</a>
+		<a href="../linkToTarget/">Click to see Link to Target example</a>
 
 		<!--BEGIN QUALTRICS SITE INTERCEPT-->
 		<script type='text/javascript'>
