--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
           <p>Crossy Block</p>
         </div>
         <div class="col-md-4">
-          <a href="http://ec2-54-200-192-157.us-west-2.compute.amazonaws.com:3004/login" target="_blank"><img class="img-responsive" src="Images/Thumbnails/PixelMania.png" alt="Pixel Mania" /></a>
-          <p>Pixel Mania</p>
+          <a href="http://ec2-54-200-192-157.us-west-2.compute.amazonaws.com:3016/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/VenueFinder.png" alt="Venue Finder" /></a>
+          <p>Venue Finder</p>
         </div>
       </div>
 
@@ -71,9 +71,8 @@
 
       <div class="row">
         <div class="col-md-4">
-          <a href="http://ec2-54-200-192-157.us-west-2.compute.amazonaws.com:3006/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/BestMusic.png" alt="Best Music" /></a>
-          <p>Best Music</p>
-        </div>
+          <a href="http://ec2-54-200-192-157.us-west-2.compute.amazonaws.com:3004/login" target="_blank"><img class="img-responsive" src="Images/Thumbnails/PixelMania.png" alt="Pixel Mania" /></a>
+          <p>Pixel Mania</p>
         <div class="col-md-4">
           <a href="http://ec2-54-200-192-157.us-west-2.compute.amazonaws.com:3007/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/FirebaseChat.png" alt="Firebase Chatroom" /></a>
           <p>Firebase Chatroom</p>
@@ -101,8 +100,8 @@
 
       <div class="row">
         <div class="col-md-4">
-          <a href="CamperNews/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/CamperNews.png" alt="Camper News" /></a>
-          <p>Camper News</p>
+          <a href="http://ec2-54-200-192-157.us-west-2.compute.amazonaws.com:3006/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/BestMusic.png" alt="Best Music" /></a>
+          <p>Best Music</p>
         </div>
         <div class="col-md-4">
           <a href="Weather/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Weather.png" alt="Current Local Weather" /></a>
@@ -133,6 +132,10 @@
         <div class="col-md-4">
           <a href="http://ec2-54-200-192-157.us-west-2.compute.amazonaws.com:3003/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Pokedex.png" alt="Pokedex" /></a>
           <p>Pokedex</p>
+        </div>
+        <div class="col-md-4">
+          <a href="CamperNews/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/CamperNews.png" alt="Camper News" /></a>
+          <p>Camper News</p>
         </div>
       </div>
 
