added Venue Finder to portfolio

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
         <div class="col-md-4">
           <a href="http://ec2-54-200-192-157.us-west-2.compute.amazonaws.com:3004/login" target="_blank"><img class="img-responsive" src="Images/Thumbnails/PixelMania.png" alt="Pixel Mania" /></a>
           <p>Pixel Mania</p>
+        </div>
         <div class="col-md-4">
           <a href="http://ec2-54-200-192-157.us-west-2.compute.amazonaws.com:3007/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/FirebaseChat.png" alt="Firebase Chatroom" /></a>
           <p>Firebase Chatroom</p>
