--- a/comments/public/index.html
+++ b/comments/public/index.html
@@ -4,6 +4,7 @@
   		<title>Comments!</title>
   		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="stylesheets/style.css" />
+		<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
 		<script src="http://code.jquery.com/jquery-1.10.2.js"></script>
 		<script src="javascripts/comments.js"></script>
 	</head>
