--- a/CorporateBSGenerator/public/index.html
+++ b/CorporateBSGenerator/public/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
         <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="stylesheets/style.css">
+        <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
         <script src="javascripts/script.js"></script>
     </head>
