--- a/PixelMania/public/highscores.html
+++ b/PixelMania/public/highscores.html
@@ -8,6 +8,7 @@
     <link type="text/css" rel="stylesheet" href="stylesheets/reset.css">
 	<link type="text/css" rel="stylesheet" href="stylesheets/bootstrap.min.css">
 	<link type="text/css" rel="stylesheet" href="stylesheets/style.css">
+	<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
 	<script type="text/javascript" src="javascripts/jquery-1.12.0.min.js"></script>
 	<script type="text/javascript" src="javascripts/jquery.cookie.js"></script>
     <script type="text/javascript" src="javascripts/highscores.js"></script>
