--- a/PixelMania/public/index.html
+++ b/PixelMania/public/index.html
@@ -8,6 +8,7 @@
 		<link type="text/css" rel="stylesheet" href="stylesheets/reset.css">
 		<link type="text/css" rel="stylesheet" href="stylesheets/bootstrap.min.css">
 		<link type="text/css" rel="stylesheet" href="stylesheets/style.css">
+		<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
 	</head>
 	
 	<body>
