--- a/PixelMania/public/login.html
+++ b/PixelMania/public/login.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="stylesheets/reset.css">
     <link rel="stylesheet" href="stylesheets/bootstrap.min.css">
     <link rel="stylesheet" href="stylesheets/style.css">
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
     <script type="text/javascript" src="javascripts/jquery-1.12.0.min.js"></script>
     <script type="text/javascript" src="javascripts/jquery.cookie.js"></script>
     <script type="text/javascript" src="javascripts/login.js"></script>
