--- a/QrappyBird/index.html
+++ b/QrappyBird/index.html
@@ -5,6 +5,7 @@
 	    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	    <link href="styles/bootstrap.min.css" rel="stylesheet" type="text/css">
 	    <link href="styles/style.css" rel="stylesheet" type="text/css">
+	    <link rel="shortcut icon" href="Images/favicon.ico" type="image/x-icon" />
 	    <script src="scripts/jquery-1.12.0.min.js" type="text/javascript"></script>
 	    <script src="scripts/angular.js" type="text/javascript"></script>
 	    <script src="scripts/angular-route.js" type="text/javascript"></script>
