Updated work experience

--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
       <h3>WORK EXPERIENCE</h3>
 
       <div class="row">
-        <p>SOFTWARE ENGINEER - ENGINEERING SERVICES</p>
+        <p>FRONT END DEVELOPER - ENGINEERING SERVICES</p>
         <p>Qualtrics</p>
         <p>October 2015 - present</p>
       </div>
