added updated versions of Connect Four, Click the Dot, Piano, and Canvas Animation to the portfolio

--- a/index.html
+++ b/index.html
@@ -336,15 +336,15 @@
 
       <div class="row">
         <div class="col-md-4">
-          <a href="https://survey.qualtrics.com/jfe/form/SV_1XPigC1TkHGKoQd" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Piano.png" alt="Piano" /></a>
+          <a href="Piano/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Piano.png" alt="Piano" /></a>
           <p>Piano</p>
         </div>
         <div class="col-md-4">
-          <a href="https://survey.qualtrics.com/jfe/form/SV_0JIvWm8RbmXt6gl" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Canvas.png" alt="Canvas Animation" /></a>
+          <a href="CanvasAnimation/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Canvas.png" alt="Canvas Animation" /></a>
           <p>Canvas Animation</p>
         </div>
         <div class="col-md-4">
-          <a href="https://survey.qualtrics.com/jfe/form/SV_cOuJWi5eQMIVFbf" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Connect4.png" alt="Connect Four" /></a>
+          <a href="ConnectFour/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Connect4.png" alt="Connect Four" /></a>
           <p>Connect Four</p>
         </div>
       </div>
@@ -374,7 +374,7 @@
           <p>Growing Bubbles</p>
         </div>
         <div class="col-md-4">
-          <a href="https://survey.qualtrics.com/jfe/form/SV_bkNEsCGIVKUrlNb" target="_blank"><img class="img-responsive" src="Images/Thumbnails/RedDot.png" alt="Click the Dot" /></a>
+          <a href="ClickTheDot/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/RedDot.png" alt="Click the Dot" /></a>
           <p>Click the Dot</p>
         </div>
       </div>
