--- a/ConnectFour/index.html
+++ b/ConnectFour/index.html
@@ -12,7 +12,7 @@
 	<body>
 		<h1>Connect Four</h1>
 		
-		<img id="connect4Logo" src="https://s.qualtrics.com/ControlPanel/File.php?F=F_aXFyNADv4aTks3r" />
+		<img id="connect4Logo" src="connect4.png" />
 
 		<div id="gameContainer">
 			<div id="redWin">RED WINS!</div>
