updated portfolio to include refactored Duck Hunt

--- a/DuckHunt/index.html
+++ b/DuckHunt/index.html
@@ -21,6 +21,7 @@
 			<img id="displayHit" src="Images/duck_shot.png">
 
 			<div id="finalScoreContainer">Final Score: <span id="finalScore">0</span></div>
+			<div id="playAgain">Play Again</div>
 			
 			<img class="duck" id="duck1" src="Images/duck.gif">
 			<img class="duck" id="duck2" src="Images/duck.gif">
