--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
 
       <div class="row">
         <div class="col-md-4">
-          <a href="https://survey.qualtrics.com/jfe/form/SV_3wTHewyrusxK2Oh" target="_blank"><img class="img-responsive" src="Images/Thumbnails/DuckHunt.png" alt="Duck Hunt" /></a>
+          <a href="DuckHunt/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/DuckHunt.png" alt="Duck Hunt" /></a>
           <p>Duck Hunt</p>
         </div>
         <div class="col-md-4">
@@ -390,7 +390,7 @@
     <div class="container" id="about">
       <h3>ABOUT</h3>
       <div class="row">
-      <p>I have a bachelor's degree in Statistics with a minor in Psychology from Brigham Young University. Mid-way through my undergraduate studies, I took an interest in web development and began teaching myself through online courses such as Udemy, Pluralsight, Codecademy, and FreeCodeCamp. I took a few computer science classes at BYU as well to learn the MEAN stack and excelled at those. I began building web applications in my free time to gain experience and then landed a development job at Qualtrics on our engineering services team.</p>
+      <p>I have a bachelor's degree in Statistics with a minor in Psychology from Brigham Young University. Mid-way through my undergraduate studies, I took an interest in web development and began teaching myself through online courses such as Udemy, Pluralsight, Codecademy, Khan Academy, HackRank, and FreeCodeCamp. I took a few computer science classes at BYU as well to learn the MEAN stack and excelled at those. I began building web applications in my free time to gain experience and then landed a development job at Qualtrics on their engineering services team. After a few years at Qualtrics, I took a UI Developer role at Younique where I'm continuning to grow my knowledge and expertise on many modern web frameworks.</p>
       <p>My hobbies include snowboarding, biking, skydiving, fire juggling, reading, playing drums and keyboard, and spending time with my beautiful wife and daughter.</p>
       </div>
     </div>
@@ -408,7 +408,7 @@
       <h4 id="hard">HARD SKILLS</h4>
 
       <div class="row">
-        <p>I'm most fluent in the MEAN stack (MongoDB, Express, Node.js, AngularJS) and love to develop full stack applications. I also have experience working with PHP and MySQL backends to create RESTful API services. When not working with AngularJS on the frontend, I'm well-versed in vanilla JavaScript, jQuery, and jQuery UI.</p>
+        <p>I'm most fluent in the MEAN stack (MongoDB, Express, AngularJS, Node.js) and love to develop full stack applications. I also have experience working with PHP and MySQL backends to create RESTful API services. When not working with AngularJS on the frontend, I'm well-versed in vanilla JavaScript, jQuery, jQuery UI, and React.js.</p>
       </div>
 
       <h4 id="soft">SOFT SKILLS</h4>
@@ -429,9 +429,15 @@
       <h3>WORK EXPERIENCE</h3>
 
       <div class="row">
+        <p>UI DEVELOPER</p>
+        <p>Younique</p>
+        <p>September 2017 - present</p>
+      </div>
+
+      <div class="row">
         <p>FRONT END DEVELOPER - ENGINEERING SERVICES</p>
         <p>Qualtrics</p>
-        <p>October 2015 - present</p>
+        <p>October 2015 - September 2017</p>
       </div>
 
       <div class="row">
