updated work experience and about me section

--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
     <div class="container" id="about">
       <h3>ABOUT</h3>
       <div class="row">
-      <p>I have a bachelor's degree in Statistics with a minor in Psychology from Brigham Young University. Mid-way through my undergraduate studies, I took an interest in web development and began teaching myself through online courses such as Udemy, Pluralsight, Codecademy, Khan Academy, HackRank, and FreeCodeCamp. I took a few computer science classes at BYU as well to learn the MEAN stack and excelled at those. I began building web applications in my free time to gain experience and then landed a development job at Qualtrics on their engineering services team. After a few years at Qualtrics, I took a UI Developer role at Younique where I'm continuning to grow my knowledge and expertise on many modern web frameworks.</p>
+      <p>I have a bachelor's degree in Statistics with a minor in Psychology from Brigham Young University. Mid-way through my undergraduate studies, I took an interest in web development and began teaching myself through online courses such as Udemy, Pluralsight, Codecademy, Khan Academy, HackerRank, and FreeCodeCamp. I took a few computer science classes at BYU as well to learn the MEAN stack and excelled at those. I began building web applications in my free time to gain experience and then landed a development job at Qualtrics on their engineering services team. After a few years at Qualtrics, I took a UI Developer role at Younique where I'm continuning to grow my knowledge and expertise on many modern web frameworks.</p>
       <p>My hobbies include snowboarding, biking, skydiving, fire juggling, reading, playing drums and keyboard, and spending time with my beautiful wife and daughter.</p>
       </div>
     </div>
