added 5 React projects to my portfolio

--- a/index.html
+++ b/index.html
@@ -86,6 +86,36 @@
 
       <div class="row">
         <div class="col-md-4">
+          <a href="/markdownPreviewer/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/MarkdownPreviewer.png" alt="Markdown Previewer" /></a>
+          <p>Markdown Previewer</p>
+        </div>
+        <div class="col-md-4">
+          <a href="/freeCodeCampLeaderboard/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/FreeCodeCampLeaderboard.png" alt="Free Code Camp Leaderboard" /></a>
+          <p>Free Code Camp Leaderboard</p>
+        </div>
+        <div class="col-md-4">
+          <a href="/recipeBox/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/RecipeBox.png" alt="Recipe Box" /></a>
+          <p>Recipe Box</p>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-4">
+          <a href="/gameOfLife/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/GameOfLife.png" alt="Conway's Game of Life" /></a>
+          <p>Conway's Game of Life</p>
+        </div>
+        <div class="col-md-4">
+          <a href="/dungeonCrawler/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/DungeonCrawler.png" alt="Dungeon Crawler" /></a>
+          <p>Dungeon Crawler</p>
+        </div>
+        <div class="col-md-4">
+          <a href="QuoteGenerator/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/QuoteGenerator.png" alt="Quote Generator" /></a>
+          <p>Quote Generator</p>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-4">
           <a href="http://ec2-54-200-192-157.us-west-2.compute.amazonaws.com:3015/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/UtahWeather.png" alt="Utah Weather" /></a>
           <p>Utah Weather</p>
         </div>
@@ -124,16 +154,12 @@
           <p>Pomodoro Timer</p>
         </div>
         <div class="col-md-4">
-          <a href="QuoteGenerator/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/QuoteGenerator.png" alt="Quote Generator" /></a>
-          <p>Quote Generator</p>
+          <a href="http://ec2-54-200-192-157.us-west-2.compute.amazonaws.com:3003/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Pokedex.png" alt="Pokedex" /></a>
+          <p>Pokedex</p>
         </div>
       </div>
 
       <div class="row">
-        <div class="col-md-4">
-          <a href="http://ec2-54-200-192-157.us-west-2.compute.amazonaws.com:3003/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Pokedex.png" alt="Pokedex" /></a>
-          <p>Pokedex</p>
-        </div>
         <div class="col-md-4">
           <a href="CamperNews/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/CamperNews.png" alt="Camper News" /></a>
           <p>Camper News</p>
