initial re-design is complete; created better tile format with a descrption and technologies used

--- a/Squarexploder/index.html
+++ b/Squarexploder/index.html
@@ -606,7 +606,7 @@
 		<input type="hidden" id="hiddenType" value="none">
 		<div id="pageContainer">
 			<div id="logoContainer">
-				<img src="https://viawest.qualtrics.com/ControlPanel/Graphic.php?IM=IM_bx5lW2pgeWNeqpf" alt="Squarexploder" />
+				<img src="SquarexploderLogo.png" alt="Squarexploder" />
 			</div>
 			<div id="timerContainer">
 				<span>Time: </span>
