--- a/PixelMania/public/index.html
+++ b/PixelMania/public/index.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
-
 <html lang="en">
-
 	<head>
 		<title>Pixel Mania</title>
 		<meta charset="utf-8">
@@ -17,7 +15,7 @@
 		<div id="messageBoard">
 			<h3 class="message">You are:</h3>
 			<span id="yourColor"></span>
-			<h3 class="message" id="msgReplace">Replace this text</h3>
+			<h3 class="message" id="msgReplace"></h3>
 			<input id="quit" class="btn btn-danger btn-lg" type="submit" value="Quit" />
 		</div>
 		
